# chess-codegen

./: README.md  codegen.py  main.py  pyproject.toml
.github/workflows/: tests.yml
brief/: chess_rules.md  chess_rules.txt  deliverables.md  deliverables.txt  iteration_1.md  iteration_1.txt  project.md  project.txt  uci.md  uci.txt
runs/copilot-phase-1/: engine.py
runs/copilot@1-iteration_1/: engine_tests.py
runs/ghc-phase-1/: engine.py  engine_tests.py
scripts/: download_stockfish.py
tests/: test_chess.py  test_dummy.py
