[tool.poetry]
name = "chess-codegen"
version = "0.1.0"
description = "A chess playing program developed by a codegen agent"
authors = ["Andrei Savu <savu.andrei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
